Filled in the rest of the README.

--- a/README
+++ b/README
@@ -4,5 +4,22 @@ src.boilerplate
 My "source-code boilerplate", outlining my preferred coding styles.
 
 
-When I start to write a new script, class, program, or whatever, I start with a copy of one of these files.
+When I start to write a new script, class, program, or whatever, I
+begin by copying of one of these files.  They contain not only a
+general-purpose layout for the source, but also contain "hints" to me
+for what style I'm using with that particular language.
 
+
+In other words, these files also illustrate the "coding-stylistics"
+that I've developed over the years for the various programming
+languages I've worked with.
+
+What do I mean by "coding-stylistics?"  Think, for a moment, about
+writing anything in English.  If you wanted your writing to contain
+proper, formal English, you'd refer to Strunk & White's book, "The Elements of
+Style," the bible of stylistics for good English.  Any decent software
+developer will have their own "coding-stylistics" that they've
+formed over the years.  Any software developer who's not a
+Primadonna-Programmer will also be able to switch easily between their
+personal stylistics and the coding standards they're required to use
+at work.
